plotting windstations ggplot2

--- a/reports/eKlimastations.Rmd
+++ b/reports/eKlimastations.Rmd
@@ -9,19 +9,43 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(here)
+library(sf)
 ```
 
 ```{r}
-active <- read_delim(here("data", "raw", "eKlima", "windstationsEklima.txt"), delim = ";", 
-                     na=c("-9999"))
+windstations <- read_delim(here("data", "raw", "eKlima", "windstationsEklima.txt"), 
+                     delim = ";", na=c("-9999"))
 files <- list.files(here("data", "raw", "eKlima"), 
-                         pattern = "metastations", full.names = TRUE)
-read_delim(coordfiles, delim = ";")
-metastations <- lapply(files, read_delim, delim = ";") %>% 
+                    pattern = "metastations", full.names = TRUE)
+stationsmeta <- lapply(files, read_delim, delim = ";") %>% 
   bind_rows() %>% 
   select(Stnr:Name, Utm_e:Utm_zone) %>% 
   distinct(Stnr, .keep_all = TRUE)
   
-metastations
+windstations <- left_join(windstations, stationsmeta, by = "Stnr") %>% 
+  drop_na()
+```
+
+```{r}
+wrld <- st_read(here("data", "raw", "TM_WORLD_BORDERS-0.3"), layer = "TM_WORLD_BORDERS-0.3")
+nor <- wrld[wrld$ISO3=="NOR", ] %>% 
+  st_transform(crs = 32633) # WGS 84 / UTM zone 33N
+windstations <- st_as_sf(windstations, crs = 32633, coords = c("Utm_e","Utm_n"))
+
+ggplot() +
+  geom_sf(data = nor) + 
+  geom_sf(data = windstations, colour = "red")
+```
+
+```{r}
+g = st_sfc(st_point(1:2))
+st_sf(a=3,g)
+
+broervika <- st_point(c(-34167, 6839532)) 
+st_sf(broervika)
+  st_set_crs(25833) # ETRS89 / UTM zone 33N
+st_crs(broervika) <- 25833
+
+?st_nearest_feature
 ```
 
