--- a/reports/dispersal-model-validation.Rmd
+++ b/reports/dispersal-model-validation.Rmd
@@ -46,7 +46,7 @@ plot(grd[c(1,120:121),]) #features ordered SW to NE, by row
 ```
 
 ```{r add data to grid}
-g <- st_join(grd, sources)
+g <- st_join(grd, sources) # Note: grid cells with multiple seed sources are duplicated
 
 vegheight <- raster::raster(here("data","raw","seedtraps","lidar","vegheight.tif"))
 vegheight <- st_sf(vegheight = raster::extract(vegheight, pts), geometry = st_geometry(pts))
@@ -54,25 +54,59 @@ g <- st_join(g, vegheight)
 p <- st_join(pts, g)
 ```
 
-```{r wind sectors}
-sector.breaks <- seq(0,360,by=20)
+```{r seed density}
+sector.breaks <- seq(0, 360, by=20)
 i <- 50
-src <- subset(p, !is.na(p$cones))[i,]
-dX <- st_coordinates(src)[,1] - st_coordinates(p)[,1]
-dY <- st_coordinates(src)[,2] - st_coordinates(p)[,2]
+seedsrc <- subset(p, !is.na(p$cones))[i,]
+dX <- st_coordinates(seedsrc)[,1] - st_coordinates(p)[,1]
+dY <- st_coordinates(seedsrc)[,2] - st_coordinates(p)[,2]
 source(here("R","functions.R"))
 landscape <- p %>% 
   mutate(angle = angle(dX, dY)) %>% # compass bearing FROM landscape TO source (matches wind directions)
-  mutate(sector = cut(angle, sector.breaks, include.lowest = TRUE))
+  mutate(sector = cut(angle, sector.breaks, include.lowest = TRUE)) %>% 
+  mutate(dist.to.seedsrc = as.numeric(st_distance(p, seedsrc)))
 
-j <- levels(landscape$sector)[1]
-sector <- filter(landscape, sector == j)
-set.seed(42)
+j <- 1
+sect <- levels(landscape$sector)[j]
+vegh <- landscape %>% 
+  filter(sector == sect) %>% 
+  pull(vegheight) %>% 
+  mean()
+dispersal.season <- c(9:12,1:2) # after Harris, A. S. 1990.
 wind <- windobs %>% 
+  filter(Mnth %in% dispersal.season) %>%
   mutate(sector = cut(DD, sector.breaks, include.lowest = TRUE)) %>%
-  filter(sector == j) %>%
-  sample_n(100, weight = FF) %>% 
+  filter(sector == sect) %>%
+  sample_n(100, weight = FF) %>% # assume probability of abscission is directly related to wind speed
   pull(FF)
+
+k <- 1
+source(here("R","SkarpaasShea_2007.R"))
+mod <- function(x, H = seedsrc$height, 
+                Fm = 0.94, # m/s, after Sandvik, H. 2012. 
+                Um = wind[k], zm = 10, # measured 10 m above ground at station 
+                h = vegh) {
+  d <- calc_d(h)
+  z0 <- calc_z0(h)
+  ustar <- calc_ustar(Um, zm, d, z0)
+  U <- calc_U(H, ustar, d, z0)
+  sigma <- calc_sigma(z = H, d, ustar, U)
+  nu <- calc_nu(H, U, Fm)
+  lambda <- calc_lambda(H, sigma)
+  statmod::dinvgauss(x, mean=nu, shape=lambda)
+}
+mod()
+
+group_by(landscape, sector) %>% 
+  summarize(mean(vegheight, na.rm = TRUE))
+
+tab <- as_tibble(landscape) %>% 
+  mutate(sector = as.character(sector)) %>% 
+  filter(sector == sect)
+
+m <- matrix(data = NA, nrow = nrow(tab), ncol = length(wind))
+
+
 ```
 
 
